# celery-sqlalchemy-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
celery-sqlalchemy-kit/: __init__.py  base_task.py  requirements.prod.txt  scheduler.py
celery-sqlalchemy-kit/db/: crud.py  model.py  session.py
celery-sqlalchemy-kit/tests/: test_celery_scheduler.py
celery-sqlalchemy-kit/tests/scripts/: setup_routines_table.py  start_tests.sh
celery_sqlalchemy_kit/: __init__.py  scheduler.py
celery_sqlalchemy_kit/db/: __init__.py  crud.py  session.py
celery_sqlalchemy_kit/tests/: celery_test_instance.py
celery_sqlalchemy_kit/tests/scripts/: start_celery.sh  start_celery_beat.sh
example/: .env.example  celery_app.py  custom_tasks.py
src/: __init__.py  base_task.py  crud.py  crud_routines.py  dockerfile  requirements.prod.txt  scheduler.py
src/db/: model.py  session.py
src/example/: .env.example  celery.py  custom_tasks.py
src/scripts/: start_celery.sh  start_tests.sh
src/tests/: celery_test_instance.py  conftest.py  dockerfile  requirements.dev.txt  setup_routines_table.py  test_celery_scheduler.py
src/tests/scripts/: prestart.py  setup_routines_table.py  start_celery_beat.sh
tests/: celery_test_instance.py  test_celery_scheduler.py
tests/scripts/: prestart.py  setup_routines_table.py  start_celery_beat.sh  start_tests.sh
