[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celery-sqlalchemy-kit"
version = "0.1.0"
authors = [
  { name="Amelie Luecke", email="amelie.luecke@cap-on.de" }, { name="Philipp Ratz", email="philipp.ratz@cap-on.de" }
]
description = "Schedule tasks in an SQL Database and define Async Celery Tasks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    'celery >= 5.2.7, < 6',
    'psycopg2 >= 2.9.3, < 3',
    'redis >= 4.5.1, < 5',
    'SQLAlchemy >= 1.4.46, < 3',
    'asyncpg >= 0.27.0'
]

[project.optional-dependencies]
tests = [
    'tenacity >= 8.1.0, < 9',
    'pytest > 7.2.1, < 8',
    'tenacity > 8.1.0, < 9',
]

[project.urls]
"Homepage" = "https://github.com/cap-on/celery-sqlalchemy-kit"
"Bug Tracker" = "https://github.com/cap-on/celery-sqlalchemy-kit/issues"